# 34.DriverMotor_esp32

./: CMakeLists.txt  Common.h  README.md  requirements.txt  sdkconfig  sdkconfig.old
components/peripheral/: CMakeLists.txt  user_i2c.c  user_i2c.h  user_pwm.c  user_pwm.h
components/task/: CMakeLists.txt  plan_task.c  user_console_interface.c  user_console_interface.h
components/task/cmd_nvs/: cmd_nvs.c
components/user_driver/: CMakeLists.txt  user_leds.c  user_leds.h  user_vibration_motor.c  user_vibration_motor.h
main/: main.c
